	- Battle damage fuel leak rates now scale by (bullet caliber)^2, instead of (bullet caliber). Fuel leak rates for 20mm caliber remain the same, calibers higher and lower than 20mm will now have higher and lower leak rates, respectively.
	- Make sure various pooled objects are disabled when leaving the flight scene.
	- Fix missing resource for the Bubble CM.
- UI:
	- Fix part filtering by search terms in the editors.
	- New Opacity option in BDA Team Icons to set icon opacity.
	- Adds CASE ammo explosion radii visualizer, enable via F3.
	- Continuous Spawn now shows lives remaining in the Vessel Switcher GUI.
	- Add a UI scaling option for BDA's windows.
	- Improve the logarithmic scaling in the radar windows.
- AI / WM:
	- Add new "Kinematic Msl Evasion" toggle to Pilot AI under the evasion settings. When this is enabled the AI will evaluate the best maneuver to defeat a beyond-visual-range (BVR) missile using only kinematic maneuvers. The Time to Impact Before Evade setting on the weapons manager should be set to a high value when this evasion option is enabled. Maneuvers the AI will use are:
		- Crank - Fly at an angle to the target, while still maintaining radar lock.
		- Beam/Notch - Fly perpendicular to the missile.
		- Turn away/Turn cold - Fly away from the missile.
		- Notch & dive - This is the standard AI behavior if this toggle is disabled. It is also used if the toggle is enabled and the AI is within lethal range of the missile.
	- Invert the roll target when the fly-to direction is below and behind the craft within the Immelmann turn angle.
	- Fix automatic gun range adjustments in the WM again.
	- Prevent Orbital AI from changing attitude while launched missile is still near spacecraft.
	- Add Smoke CM timing/interal/repetition settings.
  - Fix the missile evasion direction using the wrong reference frame.
  - Automatically disable precision input mode when auto-tuning (UI element doesn't switch though).