@@ -6,6 +6,8 @@
 	- Battle damage fuel leak rates now scale by (bullet caliber)^2, instead of (bullet caliber). Fuel leak rates for 20mm caliber remain the same, calibers higher and lower than 20mm will now have higher and lower leak rates, respectively.
 	- Make sure various pooled objects are disabled when leaving the flight scene.
 	- Fix missing resource for the Bubble CM.
+	- Add a 'withZero' parameter to semi-log sliders that allows them to include 0 and uses lower precision for the smallest range.
+	- Add a 'GUIUtils.HorizontalSemiLogSlider' for handling custom horizontal sliders for semi-log float ranges.
 - UI:
 	- Fix part filtering by search terms in the editors.
 	- New Opacity option in BDA Team Icons to set icon opacity.
